<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circle_image="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/user_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:orientation="vertical"
        android:padding="16dp">

        <com.zhan.framework.ui.widget.CircleImageView
            android:id="@+id/user_img"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            circle_image:border_width="0dp"/>

        <TextView
            android:id="@+id/person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"/>

        <TextView
            android:id="@+id/person_departmentname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setting_teacher_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/remind_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_underline_selector"
                android:minHeight="@dimen/min_item_height"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="16dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"
                    android:text="@string/settings_remind_message"
                    android:textColor="#7F7F7F"
                    android:textSize="@dimen/text_size_normal"/>

                <com.zhan.framework.ui.widget.UISwitchButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_underline_selector"
                android:minHeight="@dimen/min_item_height"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="手机"
                    android:textColor="#7F7F7F"
                    android:textSize="@dimen/text_size_normal"/>

                <TextView
                    android:id="@+id/item_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="#7F7F7F"
                    android:textSize="@dimen/text_size_normal"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow_right"
                    android:visibility="invisible"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/update_nick_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_underline_selector"
                android:minHeight="@dimen/min_item_height"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="昵称"
                    android:textColor="#7F7F7F"
                    android:textSize="@dimen/text_size_normal"/>

                <TextView
                    android:id="@+id/item_nick_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="#7F7F7F"
                    android:textSize="@dimen/text_size_normal"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow_right"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/update_people_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_underline_selector"
                android:minHeight="@dimen/min_item_height"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="姓名"
                    android:textColor="#7F7F7F"
                    android:textSize="@dimen/text_size_normal"/>

                <TextView
                    android:id="@+id/item_person_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="#7F7F7F"
                    android:textSize="@dimen/text_size_normal"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow_right"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/update_school_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_underline_selector"
                android:minHeight="@dimen/min_item_height"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="16dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="学校"
                    android:textColor="#7F7F7F"
                    android:textSize="@dimen/text_size_normal"/>

                <TextView
                    android:id="@+id/item_school_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="#7F7F7F"
                    android:textSize="@dimen/text_size_normal"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow_right"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/clear_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_underline_selector"
                android:minHeight="@dimen/min_item_height"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"
                    android:text="@string/settings_clear_cache"
                    android:textColor="#7F7F7F"
                    android:textSize="@dimen/text_size_normal"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow_right"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_underline_selector"
                android:minHeight="@dimen/min_item_height"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"
                    android:text="@string/settings_about_us"
                    android:textColor="#7F7F7F"
                    android:textSize="@dimen/text_size_normal"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow_right"/>

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/settings_quit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_white_underline_selector"
                android:minHeight="@dimen/min_item_height">

                <TextView
                    android:id="@+id/setting_quit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/settings_quit"
                    android:textColor="#ff5252"
                    android:textSize="@dimen/text_size_large"/>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>